--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
-      - run: sudo apt install -y ghostscript fonts-noto
+      - run: sudo apt install -y ghostscript fonts-freefont-ttf
       - uses: julia-actions/setup-julia@v2
         with:
           version: 1
