--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -4,6 +4,10 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 InverseFunctions = "3587e190-3f89-42d0-90ee-14403ec27112"
 Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
+
+[sources]
+Unitful = {path = ".."}
 
 [compat]
 Documenter = "1"
