Add compat for NaNMath

--- a/Project.toml
+++ b/Project.toml
@@ -35,6 +35,7 @@ InverseFunctions = "0.1"
 LaTeXStrings = "1.2.0"
 Latexify = "0.16.8"
 LinearAlgebra = "<0.0.1, 1"
+NaNMath = "1"
 Printf = "<0.0.1, 1"
 REPL = "<0.0.1, 1"
 Random = "<0.0.1, 1"
